Mon Jun  4 14:42:42 UTC 2012  Adam Mitz  <mitza@ociweb.com>

        * MPC/config/dcps_qos_xml_handler.mpb:
        * MPC/config/dcps_qos_xml_handler_base.mpb:
        * dds/DCPS/QOS_XML_Handler/optional_ace_xml_utils.mpb:
        * dds/DCPS/QOS_XML_Handler/qos_xml_handler.mpc:

          New ace base project "ace_xml_utils" can't be included when
          dds4ccm_opendds=0 because we may be building with an older ACE.

Mon Jun  4 11:43:04 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * dds/DdsDcps.mpc:
          Added missing after of ciao session

Mon Jun  4 07:29:47 UTC 2012  Marcel Smit  <msmit@remedy.nl>

        * tests/DCPS/RegisterInstance/register_instance.mpc:
          Fixed link issues.

Sun Jun  3 19:21:33 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * NEWS:
          Document new qos xml library

Sun Jun  3 19:11:15 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/dcps_tests.lst:
          Added QoS_XML/dump

Sun Jun  3 19:01:36 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * dds/DCPS/QOS_XML_Handler/QOS_XML_Loader.cpp:
          Fixed search path

Sun Jun  3 18:37:26 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * MPC/config/dcps_qos_xml_handler.mpb:
        * MPC/config/dcps_qos_xml_handler_base.mpb:
        * dds/DCPS/QOS_XML_Handler:
        * dds/DCPS/QOS_XML_Handler/DataReaderQos_Handler.h:
        * dds/DCPS/QOS_XML_Handler/DataReaderQos_Handler.cpp:
        * dds/DCPS/QOS_XML_Handler/DataWriterQos_Handler.h:
        * dds/DCPS/QOS_XML_Handler/DataWriterQos_Handler.cpp:
        * dds/DCPS/QOS_XML_Handler/ParticipantQos_Handler.h:
        * dds/DCPS/QOS_XML_Handler/ParticipantQos_Handler.cpp:
        * dds/DCPS/QOS_XML_Handler/PublisherQos_Handler.h:
        * dds/DCPS/QOS_XML_Handler/PublisherQos_Handler.cpp:
        * dds/DCPS/QOS_XML_Handler/QOS_Common.h:
        * dds/DCPS/QOS_XML_Handler/QOS_Common.cpp:
        * dds/DCPS/QOS_XML_Handler/QOS_DataReader_T.h: